# chatStreamlit-langchain

./: .zshrc  app.py  ingest.py  pyproject.toml
src/: app.py  langchain_docs_loader.py
