[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["jose <joseandrescolmenares02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.33.0"
python-dotenv = "^1.0.0"
langchain="0.1.4"
langchain_community="0.0.16"
langchain_core="0.1.17"
langchain_openai="0.0.5"
tenacity = "^8.2.3"
requests = "^2.31.0"
bs4 = "^0.0.1"
ipykernel = "^6.25.2"
html2text = "^2020.1.16"
lxml = "^4.9.3"
tiktoken = "^0.5.1"
pandas = "^2.1.1"
seaborn = "^0.13.0"
chromadb = "^0.4.13"
pydantic = "^2.4.2"
lark = "^1.1.7"
rank-bm25 = "^0.2.2"
cohere = "^4.27"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
